--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,13 @@
-# -------------------------------------------
-# ?? Configuração do Banco de Dados H2
-# -------------------------------------------
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+# Banco H2 temporário
+spring.datasource.url=jdbc:h2:mem:kaowdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# -------------------------------------------
-# ? JPA / Hibernate
-# -------------------------------------------
+# JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-# -------------------------------------------
-# ? H2 Console (pra acessar pelo navegador)
-# -------------------------------------------
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# -------------------------------------------
-# ? Porta e context path (opcional)
-# -------------------------------------------
+# Porta e logs
 server.port=8080
+spring.h2.console.enabled=true
