Alterando drasticamente a estrutura do projeto, por necessidades de conectividade

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Porta e logs
 server.port=8080
 spring.h2.console.enabled=true
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
