Um gigantesco Revamp no projeto, muitas partes do codigo sendo alteradas de acordo com a necessidade, mas ainda possui somente login e cadastro

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-# Banco H2 temporário
-spring.datasource.url=jdbc:h2:mem:kaowdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Banco ORCL
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/ORCL
+spring.datasource.username=rm558475
+spring.datasource.password=210306
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-# JPA
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+#JPA
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=none
 
 # Porta e logs
 server.port=8080
 spring.h2.console.enabled=true
+
+spring.jpa.open-in-view=false
