--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 spring.jpa.hibernate.ddl-auto=none
 
 # Porta e logs
-server.port=8080
+server.port=${PORT:8080}
 spring.h2.console.enabled=true
 
 spring.jpa.open-in-view=false
