adicionando HikariCP para controle de conexões

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# HikariCP - controle de conexões (ESSENCIAL PRA FIAP)
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.max-lifetime=60000
+spring.datasource.hikari.connection-timeout=30000
+
+
 # Banco ORCL
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521/ORCL
 spring.datasource.username=rm558475
