--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.h2.console.enabled=true
 spring.jpa.open-in-view=false
 
 spring.jackson.time-zone=America/Sao_Paulo
+spring.jpa.properties.hibernate.jdbc.time_zone=America/Sao_Paulo
