Adicionando documentação Swagger e page

--- a/build.gradle
+++ b/build.gradle
@@ -40,4 +40,7 @@ bootJar {
     archiveFileName = 'app.jar'
 }
 
-//Testando
+
+dependencies {
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+}
