SecurityConfig permitindo Swagger

--- a/build.gradle
+++ b/build.gradle
@@ -42,5 +42,5 @@ bootJar {
 
 
 dependencies {
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 }
